# kiro_steering_doc_wizard

./: .gitignore  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  guidance-tidbits.md  pyproject.toml
.kiro/specs/steering-docs-wizard/: design.md  requirements.md  tasks.md
scripts/: test-all-versions.sh
src/steering_wizard/: __init__.py  main.py
src/steering_wizard/core/: __init__.py  document_generator.py  dynamic_questionnaire.py  project_finder.py  questionnaire.py  template_engine.py  yaml_questionnaire.py
src/steering_wizard/models/: __init__.py  config.py  questionnaire_schema.py
templates/: default-questionnaire.yaml  development-guidelines.md.j2  llm-guidance.md.j2
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_document_generator.py  test_integration.py  test_project_finder.py  test_questionnaire.py  test_yaml_questionnaire.py
